history and team section

--- a/index.html
+++ b/index.html
@@ -66,18 +66,72 @@
       </section>
 
       <section class="section-01-history" aria-label="section-01-history">
-        <div class="text-01-history">01.</div>
-        <div>HISTORY</div>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero
-          assumenda ex soluta eligendi, et explicabo doloremque cumque sapiente,
-          praesentium nesciunt maiores tempora? Nam dolore consequuntur porro
-          eligendi adipisci. Consectetur, recusandae! Lorem ipsum dolor sit
-          amet, consectetur adipisicing elit. Vero assumenda ex soluta eligendi,
-          et explicabo doloremque cumque sapiente, praesentium nesciunt maiores
-          tempora? Nam dolore consequuntur porro eligendi adipisci. Consectetur,
-          recusandae!
-        </p>
+        <div class="section-01-history-info">
+          <div class="large-number">
+            <p>01.</p>
+            <p>HISTORY</p>
+          </div>
+
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero
+            assumenda ex soluta eligendi, et explicabo doloremque cumque
+            sapiente, praesentium nesciunt maiores tempora? Nam dolore
+            consequuntur porro eligendi adipisci. Consectetur, recusandae! Lorem
+            ipsum dolor sit amet, consectetur adipisicing elit. Vero assumenda
+            ex soluta eligendi, et explicabo doloremque cumque sapiente,
+            praesentium nesciunt maiores tempora? Nam dolore consequuntur porro
+            eligendi adipisci. Consectetur, recusandae!
+          </p>
+        </div>
+        <div class="section-01-history-images">
+          <div>
+            <div class="card">
+              <img
+                src="./images/mountain-carousel-1.jpeg"
+                alt="mountain-image"
+              />
+            </div>
+            <div class="card">
+              <img
+                src="./images/mountain-carousel-2.jpeg"
+                alt="mountain-image"
+              />
+            </div>
+            <div class="card">
+              <img
+                src="./images/mountain-carousel-1.jpeg"
+                alt="mountain-image"
+              />
+            </div>
+            <div class="card">
+              <img
+                src="./images/mountain-carousel-2.jpeg"
+                alt="mountain-image"
+              />
+            </div>
+          </div>
+          <div class="dots-box">
+            <button class="dot active"></button>
+            <button class="dot"></button>
+            <button class="dot"></button>
+            <button class="dot"></button>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-02-team" aria-label="section-02-team">
+        <div class="section-02-team-info">
+          <div class="large-number">
+            <p>02.</p>
+            <p>TEAM</p>
+          </div>
+
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero
+            assumenda ex soluta eligendi, et explicabo doloremque cumque
+            sapiente, praesentium nesciunt maiores tempora.
+          </p>
+        </div>
       </section>
     </main>
     <!------------------ Footer ----------->
