--- a/index.html
+++ b/index.html
@@ -60,12 +60,16 @@
         </div>
 
         <div class="nav-links">
-          <a href="##">01. HISTORY</a>
-          <a href="#">02. TEAM</a>
+          <a href="#history">01. HISTORY</a>
+          <a href="#team">02. TEAM</a>
         </div>
       </section>
 
-      <section class="section-01-history" aria-label="section-01-history">
+      <section
+        class="section-01-history"
+        id="history"
+        aria-label="section-01-history"
+      >
         <div class="section-01-history-info">
           <div class="large-number">
             <p>01.</p>
@@ -119,7 +123,7 @@
         </div>
       </section>
 
-      <section class="section-02-team" aria-label="section-02-team">
+      <section class="section-02-team" id="team" aria-label="section-02-team">
         <div class="section-02-team-info">
           <div class="large-number">
             <p>02.</p>
